--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,21 @@
             <artifactId>commons-csv</artifactId>
             <version>1.7</version>
         </dependency>
+        <!-- Apache POI start -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>5.0.0</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- xss模式 -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.0.0</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- Apache POI end -->
     </dependencies>
 
 </project>
